# libtea

./: .gitignore  CMakeLists.txt  README.md  um-theme.puml
.github/: CODEOWNERS
cmake/: libteaConfig.cmake.in
examples/: basic_usage.cpp
include/libtea/ml/: base.hpp  linear_regression.hpp  metrics.hpp  train_test_split.hpp
src/: linear_regression.cpp  metrics.cpp
uml/: activity_linear_regression_fit.puml  activity_linear_regression_predict.puml  class_diagram.puml  package_overview.puml  sequence_basic_usage.puml
